--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
-node_modules
+# Node.js
+node_modules/
+
+package-lock.json
+
+#File Uploads
+uploads/*
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# dotenv environment variables file
+.env
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Operating System Files
+.DS_Store
+Thumbs.db
+
+# Miscellaneous
+*.log
+*.bak
+*.tmp
+*.bak
+*.swp
+*.zip
